# anagramist

./: .gitignore  README.md  all.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
anagramist/: __init__.py  candidate.py  cli.py  fragment.py  guess.py  heapqueue.py  logits.py  oracles.py  persistentsearchtree.py  puzzle.py  searchqueue.py  solver.py  solvers.py  utilities.py  vocab.py
anagramist/logits/: __init__.py
data/: dinocomics.sqlite3  training-set.txt  validation-set.txt  vocabulary.txt
fundament/: __init__.py  __main__.py  cli.py
scripts/: score_data.sh  unique_chars.py
tests/: test_anagramist.py  test_anagramist_cli.py  test_fundament.py  test_oracle.py  test_persistentsearchtree.py  test_priority_queue.py  test_searchqueue.py  test_solver.py  test_utilities.py
