[project]
name = "anagramist"
version = "0.1"
description = "a solver for dinocomics 1663-style cryptoanagrams"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "lonnen"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
exclude=["data"]

[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
lint.select = ["E", "F", "B"]
line-length = 88
target-version = "py311"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[project.urls]
Homepage = "https://github.com/lonnen/anagramist"
Changelog = "https://github.com/lonnen/anagramist/releases"
Issues = "https://github.com/lonnen/anagramist/issues"
CI = "https://github.com/lonnen/anagramist/actions"

[project.scripts]
anagramist = "anagramist.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
